src/test/resources/semantic/custom/accept/returnValue.ul
void main() {
}

string foo() {
    return "string";
}

int bar() {
    return 54;
}

void buzz() {
    return;
}

int[5] fizz() {
    int[5] fizz;
    return fizz;
}

int blah() {
    int foo;
    return foo;
}
