src/test/resources/semantic/custom/reject/arrayAssignmentWrongType.ul
void main() {
}

void foo() {
    int[10] foo;
    foo[5] = "string";
}
